--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -4,5 +4,12 @@
   height: 100%;
   align-items: center;
   display: flex;
+  flex-flow: column;
   list-style: none;
+}
+
+@media (min-width: 500px) {
+  .NavigationItems {
+    flex-flow: row;
+  }
 }
